--- a/install
+++ b/install
@@ -1,5 +1,7 @@
 #!/usr/bin/bash
 
+[ ! -e $HOME/.vim/autoload/plug.vim ] && curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+
 ln -sf $PWD/bashconfig $HOME/.bash_aliases
 ls -l $HOME/.bash_aliases
 
