--- a/install
+++ b/install
@@ -3,11 +3,7 @@
 [ ! -e $HOME/.vim/autoload/plug.vim ] && curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 
 ln -sf $PWD/bashconfig $HOME/.bash_aliases
-ls -l $HOME/.bash_aliases
-
 ln -sf $PWD/vimrc $HOME/.vimrc
-ls -l $HOME/.vimrc
-
 ln -sf $PWD/tmux.conf $HOME/.tmux.conf
-ls -l $HOME/.tmux.conf
+ln -sf $PWD/xinitrc $HOME/.xinitrc
 
