--- a/install
+++ b/install
@@ -1,6 +1,7 @@
 #!/usr/bin/bash
 
 [ ! -e $HOME/.vim/autoload/plug.vim ] && curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+[ ! -e $HOME/.vim/colors/sierra.vim ] && curl -fLo ~/.vim/colors/sierra.vim --create-dirs https://raw.githubusercontent.com/AlessandroYorba/Sierra/master/colors/sierra.vim
 
 ln -sf $PWD/bashconfig $HOME/.bash_aliases
 ln -sf $PWD/vimrc $HOME/.vimrc
