feat(core): Add echinus config
Add echinus config as it is the one i chose to substitute spectrwm in
case of failure (as of now). The options are as similar as i could make
them to the spectrwm keymappings

Remove `vi` alias and change `torw` to copy the link instead of printing
it to terminal

--- a/install
+++ b/install
@@ -10,3 +10,6 @@ ln -sf $PWD/spectrwm.conf $HOME/.spectrwm.conf
 ln -sf $PWD/spectrwmbar.conf $HOME/.spectrwmbar.conf
 ln -sf $PWD/errnolist $HOME/.errnolist
 
+[ ! -d $HOME/.echinus ] && mkdir $HOME/.echinus
+ln -sf $PWD/echinusrc $HOME/.echinus/echinusrc
+
