feat(core): Change wm to i3 and add alacritty conf
Remove all other window manager configuration files and add in place of
those both the i3.conf (for the main keymaps and options) and
i3status.conf for the status bar

Add alacritty configuration for better portability

Research was done and Alacritty is faster than Kitty.
`time find /usr` did an average of 0.7s on Alacritty and 1.0s on Kitty

Need fix: The status bar would be preferable on the top, not bottom of
the screen

--- a/install
+++ b/install
@@ -6,10 +6,14 @@ ln -sf $PWD/bashconfig $HOME/.bash_aliases
 ln -sf $PWD/vimrc $HOME/.vimrc
 ln -sf $PWD/tmux.conf $HOME/.tmux.conf
 ln -sf $PWD/xinitrc $HOME/.xinitrc
-ln -sf $PWD/spectrwm.conf $HOME/.spectrwm.conf
-ln -sf $PWD/spectrwmbar.conf $HOME/.spectrwmbar.conf
 ln -sf $PWD/errnolist $HOME/.errnolist
 
-[ ! -d $HOME/.echinus ] && mkdir $HOME/.echinus
-ln -sf $PWD/echinusrc $HOME/.echinus/echinusrc
+[ ! -d $HOME/.config ] && mkdir $HOME/.config
+ln -sf $PWD/alacritty.conf $HOME/.config/alacritty.yml 
+
+[ ! -d $HOME/.config/i3 ] && mkdir $HOME/.config/i3 
+ln -sf $PWD/i3.conf $HOME/.config/i3/config
+
+[ ! -d $HOME/.config/i3status ] && mkdir $HOME/.config/i3status 
+ln -sf $PWD/i3status.conf $HOME/.config/i3status/config
 
