feat(core): adicionar plugins no vim e starship
Adicionar vários plugins no vimrc e;

Adicionar o Starship no bash (prompt para terminais)

--- a/install
+++ b/install
@@ -1,6 +1,9 @@
 #!/bin/bash
 
-[ ! -e $HOME/.vim/autoload/plug.vim ] && curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+[ ! -e $HOME/.vim/autoload/plug.vim ] &&\
+	curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+
+( curl -fsSL https://starship.rs/install.sh | bash ) && echo 'eval "$(starship init bash)"' >> ~/.bashrc
 
 ln -sf $PWD/bashrc $HOME/.bash_aliases
 ln -sf $PWD/vimrc $HOME/.vimrc
