--- a/install
+++ b/install
@@ -4,7 +4,7 @@
 	sh -c 'curl -fLo $HOME/.local/share/nvim/site/autoload/plug.vim --create-dirs \
 	       https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
 
-sh -c 'curl -fsSL https://starship.rs/install.sh'
+curl -fsSL https://starship.rs/install.sh | bash
 
 ln -sf $PWD/bashrc $HOME/.bash_aliases
 ln -sf $PWD/tmux.conf $HOME/.tmux.conf
