feat(script): add mktmo script
`mktmp` makes a temp file on `/tmp/` that you can edit, compile and run.
It is removed at the end of use if you don't move the file.

There is two file typed for now:
- cpp
- rust

--- a/install
+++ b/install
@@ -10,6 +10,7 @@ ln -sf $PWD/bashrc $HOME/.bash_aliases
 ln -sf $PWD/tmux.conf $HOME/.tmux.conf
 ln -sf $PWD/xinitrc $HOME/.xinitrc
 ln -sf $PWD/errnolist $HOME/.errnolist
+ln -sf $PWD/templates $HOME/.templates
 ln -sf $PWD/gdbinit $HOME/.gdbinit
 
 [ ! -d $HOME/.elinks ] && mkdir $HOME/.elinks
