fix(vim,install): add tex to vim spell
Add tex files to vim's spell list and fix install script not properly
creating `~/.dotfiles.path`. Now there are two nested commands instead
of only one (now tested and working)

--- a/install
+++ b/install
@@ -6,5 +6,5 @@
 
 curl -fsSL https://starship.rs/install.sh | bash
 
-echo "dirname `realpath install`" > ~/.dotfiles.path
+echo $(dirname `realpath install`) > ~/.dotfiles.path
 
