--- a/install
+++ b/install
@@ -1,10 +1,19 @@
 #!/bin/bash
 
+# Install VimPlug
 [ ! -e $HOME/.local/share/nvim/site/autoload/plug.vim ] &&\
 	sh -c 'curl -fLo $HOME/.local/share/nvim/site/autoload/plug.vim --create-dirs \
 		https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
 
-curl -fsSL https://starship.rs/install.sh | bash
+# Install Starship
+if [ ! -e ~/.config/starship.toml ]
+then
+	curl -o /tmp/install.sh https://starship.rs/install.sh &&\
+		chmod +x /tmp/install.sh &&\
+		/tmp/install.sh --yes &&\
+		echo 'eval "$(starship init bash)"' >> ~/.bashrc
+fi
 
-echo $(dirname `realpath install`) > ~/.dotfiles.path
+# Add a file with dotfiles path on home (used on .bash_aliases)
+echo $(dirname `realpath $0`) > ~/.dotfiles.path
 
