--- a/install
+++ b/install
@@ -5,13 +5,14 @@
 	sh -c 'curl -fLo $HOME/.local/share/nvim/site/autoload/plug.vim --create-dirs \
 	https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
 
-# Install Starship
+# Download Starship
 [ ! -e /usr/local/bin/starship ] &&\
 	curl -o install_starship.sh https://starship.rs/install.sh &&\
 	chmod +x install_starship.sh &&\
 	./install_starship.sh --yes &&\
 	rm install_starship.sh
 
+# Install Starship on bash
 [ -z "`grep 'starship' ~/.bashrc`" ] &&\
 	echo 'eval "$(starship init bash)"' >> ~/.bashrc
 
