[-] Remove mktmp and change keepass db dir
Now with my computer formatted (yes, again) tomb's mounting point
changed yet again to another place (and with it, my keepassxc password
database), so I had to change some things to reflect this location
change

I also removed mktmp in favour of the (now very useful) `cd $(mktemp
-d)` and vim-snippets

New ixx extension mapped to cpp filetype in vim because of the new
modules stuff (I'm still trying to figure out the best way to organize
my files)

Improved the char program (or script, idk) to now allow reading crom
stdin to get the typed (or piped) char

Install script now checks if it is already calling ~/.bash_aliases and,
if it is not, then add that to the user's ~/.bashrc

--- a/install
+++ b/install
@@ -12,10 +12,13 @@
 	./install_starship.sh --yes &&\
 	rm install_starship.sh
 
+# Install Custom bash on bash
+[ -z "`grep '.bash_aliases' ~/.bashrc`" ] &&\
+	echo '[ -f ~/.bash_aliases ] && source ~/.bash_aliases' >> ~/.bashrc
+
 # Install Starship on bash
 [ -z "`grep 'starship' ~/.bashrc`" ] &&\
 	echo 'eval "$(starship init bash)"' >> ~/.bashrc
 
 # Add a file with dotfiles path on home (used on .bash_aliases)
 echo $(dirname `realpath $0`) > ~/.dotfiles.path
-
