[=] Reconfig scripts, new nvim maps and more
* Wrap in neovim and reorder for alphabetic order
* Map for <C-_> and <C-|> to be easier

* Remove icon/image in dunst notifications (I guess I'll resize fonts as
  well, but I'll let that for later)
* Polybar font to Noto
* Remove picom (as I no longer use transparent things and backgrounds and
  add redswitch (for blue light filter)

* Install now create folders before installing (so stow does not link
  these folders and, instead, link only files)

* xi now copies to the clipboard (instead of main xorg clipboard)
* monsetup now uses rofi to select option AND add more options to it

--- a/install
+++ b/install
@@ -1,5 +1,9 @@
 #!/bin/sh
 
+mkdir -p ~/.config/nvim/plugged/
+mkdir -p ~/.config/qutebrowser/bookmarks/
+mkdir -p ~/.config/qutebrowser/qsettings/
+
 # Install VimPlug
 [ ! -e $HOME/.local/share/nvim/site/autoload/plug.vim ] &&\
 	sh -c 'curl -fLo $HOME/.local/share/nvim/site/autoload/plug.vim --create-dirs \
