Change to kitty, remove unnecessary configs...
And some minor aditions

--- a/install
+++ b/install
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 # This is so stow does not link folders, only files
-mkdir -p ~/.config/{kitty,i3,rofi,polybar,dunst}/
+mkdir -p ~/.config/{kitty,i3,rofi,polybar}/
 mkdir -p ~/.config/nvim/plugged/
 mkdir -p ~/.config/qutebrowser/{bookmarks,qsettings}/
 
