--- a/install
+++ b/install
@@ -5,10 +5,11 @@ mkdir -p ~/.config/{kitty,i3,rofi,polybar}/
 mkdir -p ~/.config/nvim/plugged/
 mkdir -p ~/.config/qutebrowser/{bookmarks,qsettings}/
 
-# Install VimPlug
-[ ! -e $HOME/.local/share/nvim/site/autoload/plug.vim ] &&\
-	sh -c 'curl -fLo $HOME/.local/share/nvim/site/autoload/plug.vim --create-dirs \
-	https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
+# Install Packer.nvim
+[ ! -e $HOME/.local/share/nvim/site/pack/packer/start/packer.nvim/ ] &&\
+	mkdir -p $HOME/.local/share/nvim/site/pack/packer/start/packer.nvim/ &&\
+	git clone --depth 1 https://github.com/wbthomason/packer.nvim\
+	$HOME/.local/share/nvim/site/pack/packer/start/packer.nvim/
 
 # Install Custom bash on bash
 [ -z "`grep '.bash_aliases' ~/.bashrc`" ] &&\
